--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express.island",
+  "name": "project.name",
   "version": "1.0.0",
   "description": "Let's talk about api ",
   "main": "server.js",
@@ -27,7 +27,9 @@
     "express": "^4.16.4",
     "jsonwebtoken": "^8.3.0",
     "kleur": "^2.0.2",
+    "lodash": "^4.17.11",
     "moment": "^2.22.2",
+    "multer": "^1.4.1",
     "nodemailer": "^4.6.8",
     "passport": "^0.4.0",
     "passport-jwt": "^4.0.0",
